--- a/module/plugins/tabular/htdocs/css/sliding_navigation.css
+++ b/module/plugins/tabular/htdocs/css/sliding_navigation.css
@@ -3,17 +3,16 @@ ul.sliding-navigation
     list-style: none;
     margin: 30px 0;
     padding: 0;
-    padding-top : 0px;
+    padding-top : 50px;
     position : fixed;
     z-index : 9999;
-	background: #000;
 }
 
 ul.sliding-navigation li.sliding-element h3,
 ul.sliding-navigation li.sliding-element a
 {
     display: block;
-    width: 200px;
+    width: 150px;
     padding: 5px 18px;
     margin: 0;
     margin-bottom: 2px;
@@ -21,20 +20,21 @@ ul.sliding-navigation li.sliding-element a
 
 ul.sliding-navigation li.sliding-element a
 {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    width: 140px;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
 }
 
 ul.sliding-navigation li.sliding-element h3
 {
     color: #fff;
-    background:#333;
+    background:#333 url(/static/problems/images/sliding_menu_heading_bg.jpg) repeat-y;
 }
 
 ul.sliding-navigation li.sliding-element a
 {
     color: #999;
-    background:#222;
+    background:#222 url(/static/problems/images/sliding_menu_tab_bg.jpg) repeat-y;
     border: 1px solid #1a1a1a;
     text-decoration: none;
 }
